--- a/assets/package.json
+++ b/assets/package.json
@@ -1,29 +1,27 @@
 {
-    "name": "CStheme",
+    "name": "mfc",
     "version": "1.0.0",
     "description": "Custom theme by Dariia Lukiianchuk",
     "main": "Gruntfile.js",
     "browserslist": [
-        "last 10 versions"
+        "last 5 versions",
+        "ie 9"
     ],
     "dependencies": {
-        "autoprefixer": "^9.8.0",
-        "cssnano": "~4.1.10",
-        "foundation-sites": "6.6.3",
-        "grunt": "~1.1.0",
+        "@lodder/grunt-postcss": "^3.0.0",
+        "autoprefixer": "^9.8.6",
+        "postcss-sort-media-queries": "^1.7.26",
+        "grunt": "~1.3.0",
         "grunt-concurrent": "~3.0.0",
         "grunt-contrib-clean": "~2.0.0",
         "grunt-contrib-concat": "~1.0.1",
         "grunt-contrib-copy": "~1.0.0",
-        "grunt-contrib-jshint": "~2.1.0",
-        "grunt-contrib-uglify": "~4.0.1",
+        "grunt-contrib-jshint": "~3.0.0",
+        "grunt-contrib-sass": "~2.0.0",
+        "grunt-contrib-uglify": "~5.0.0",
         "grunt-contrib-watch": "^1.1.0",
-        "grunt-postcss": "^0.9.0",
-        "grunt-sass": "~3.1.0",
+        "jshint": "^2.12.0",
         "load-grunt-tasks": "~5.1.0",
-        "mqpacker": "~7.0.0",
-        "node-sass": "^4.14.1",
-        "postcss": "^7.0.32",
-        "slick-carousel": "1.8.1"
+        "sort-css-media-queries": "~1.5.0"
     }
 }
