--- a/assets/package.json
+++ b/assets/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mfc",
+    "name": "crazyseeker",
     "version": "1.0.0",
     "description": "Custom theme by Dariia Lukiianchuk",
     "main": "Gruntfile.js",
