--- a/assets/package.json
+++ b/assets/package.json
@@ -10,8 +10,7 @@
     "dependencies": {
         "@lodder/grunt-postcss": "^3.0.0",
         "autoprefixer": "^9.8.6",
-        "postcss-sort-media-queries": "^1.7.26",
-        "grunt": "~1.3.0",
+        "grunt": "^1.4.1",
         "grunt-concurrent": "~3.0.0",
         "grunt-contrib-clean": "~2.0.0",
         "grunt-contrib-concat": "~1.0.1",
@@ -22,6 +21,7 @@
         "grunt-contrib-watch": "^1.1.0",
         "jshint": "^2.12.0",
         "load-grunt-tasks": "~5.1.0",
+        "postcss-sort-media-queries": "^1.7.26",
         "sort-css-media-queries": "~1.5.0"
     }
 }
